fixed word wrap issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -99,7 +99,6 @@
     line-height: 22px;
     border-radius: 15px;
     cursor: pointer;
-    
   }
   
   #formSection #submit-Btn {
@@ -170,7 +169,9 @@
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
       rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
     width: 300px;
-  }
+    border-radius: 2px;
+    word-wrap:wrap;
+}
   
   #bookSection ol {
     list-style-type: none;
@@ -180,6 +181,7 @@
     text-align: left;
     margin: 8px 0px 8px 15px;
     color: var(--text_color_gold);
+    word-wrap: break-word;
   }
   
   #bookSection .remove-Btn {
@@ -206,6 +208,6 @@
     height: 30px;
   }
   
-.fa-github-alt:hover{
+  .fa-github-alt:hover{
   text-decoration: underline;
 }
